# whse-optimize-toolkit

./: .gitignore  CITATION.cff  CONTRIBUTING.md  COPY_PASTE_SUBMISSION.txt  FINAL_ANSWER.md  IMPROVEMENTS_MADE.md  JOSS_READY.md  JOSS_SUBMISSION_CHECKLIST.md  JOSS_SUBMISSION_INSTRUCTIONS.md  JOSS_SUBMISSION_MESSAGE.md  LICENSE  MESSAGE_FOR_JOSS_EDITORS.md  QUICK_SUBMISSION_GUIDE.md  README.md  SUBMISSION_INDEX.md  SUBMISSION_SUMMARY.md  generate_figures.py  joss_paper_preparation.md  pyproject.toml  run_cor_experiments.py  run_fast_experiments.py  run_final_experiments.py  run_full_experiments.py  run_quick_experiments.py
.github/workflows/: ci.yml  joss-paper.yml
examples/: current_vs_optimized_routing.ipynb  simple_warehouse_slotting.ipynb
paper/: COR_manuscript.md  COR_manuscript.tex  COR_references.bib  paper.bib  paper.md  reference.lib
src/wms_optlab/: __init__.py  cli.py
src/wms_optlab/batching/: constraints.py  heuristics.py  metaheuristics.py
src/wms_optlab/data/: adapters_erp.py  generators.py  models.py
src/wms_optlab/evaluation/: metrics.py  reporting.py
src/wms_optlab/experiments/: __init__.py  baselines.py  benchmark_generator.py  hypervolume.py  moiwof.py  moiwof_v2.py  run_experiments.py  run_experiments_v2.py  statistical_analysis.py  visualization.py
src/wms_optlab/integration/: sme_erpsim_adapter.py  wms_export_templates.py
src/wms_optlab/layout/: geometry.py  topology.py  visualization.py
src/wms_optlab/routing/: layout_aware_routing.py  policies.py  shortest_path.py  simulation_interface.py
src/wms_optlab/scenarios/: order_profiles.py  what_if.py
src/wms_optlab/slotting/: evaluation.py  heuristics.py  milp_models.py
src/wms_optlab/solvers/: interfaces.py  or_tools_backend.py
tests/: test_batching_metaheuristics.py  test_erp_adapters.py  test_routing_policies.py  test_slotting_heuristics.py
